sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: ')' expected but '=' found.
		if ( plusPetitQue(i, value:Int= i+1) == false ){
                                              ^AlgBubbleSort1:10: error: ')' expected but '}' found.
	}
        ^