sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

	for ( i <- 0 to getNombreValeurs()-2 ) {
		if ( plusPetitQue(i, value:Int= i+1) == false ){
			echange (i:Int, i+1:Int)
		} 
		else { 
		}
	}
		
		 
}

